
2022-12-03  Simon Sobisch <simonsobisch@gnu.org>

	* runtime.cfg: updated COB_CURRENT_DATE for epoch

2022-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* ibm.words, mvs.words: removed words only reserved with EXEC SQL coprocessor,
	  fixing bug #810
	* ibm.words: update for Enterprise COBOL 6.4 (added FUNCTION-ID)

2022-10-10  Simon Sobisch <simonsobisch@gnu.org>

	* runtime.cfg: add COB_CORE_FILENAME and adjust COB_CORE_ON_ERROR

2022-10-05  Simon Sobisch <simonsobisch@gnu.org>

	* *.conf: changed top-level-occurs-clause "skip" to "unconformable"

2022-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* runtime.cfg: adjustments for LINE SEQUENTIAL docs

2022-09-21  Simon Sobisch <simonsobisch@gnu.org>

	* runtime.cfg: extend docs for LINE SEQUENTIAL settings

2022-09-15  Nicolas Berthier <nicolas.berther@ocamlpro.com>

	* general: add options areacheck and missing-period

2022-08-03  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* general: do not reserve EXAMINE keyword by default, only in
	  lax configurations

2022-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* general: add xml-parse-xmlss, note: explicit NOT enabled
	  in lax.conf-inc as it would change the result for -std=acu

2022-07-28  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* general: add option format

2022-07-14  Simon Sobisch <simonsobisch@gnu.org>

	* general: set defaultbyte to "none" for standard COBOL, 32 to " "

2022-07-12  Simon Sobisch <simonsobisch@gnu.org>

	* ibm-strict.conf, mvs-strict.conf, gcos-strict.conf, bs2000-strict.conf:
	  adjusted defaultbyte to 0

2022-07-12  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* general: add option picture-l

2022-07-01  Simon Sobisch <simonsobisch@gnu.org>

	* general: removed alias VALUES=VALUE, now a separate word

2022-06-17  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* general: added config option device-mnemonics (boolean)

2022-06-12  Simon Sobisch <simonsobisch@gnu.org>

	* runtime.cfg: add COB_CORE_ON_ERROR
