@@ -202,7 +202,7 @@ dpc-in-data:			xml # verify
 
 alter-statement:			obsolete
 comment-paragraphs:			obsolete # not verified yet
-partial-replacing-with-literal:		ok
+exact-partial-replacing-when-literal-src:	ok
 control-division:			unconformable
 call-overflow:				ok
 data-records-clause:			obsolete # not verified yet
