@@ -201,7 +201,7 @@ dpc-in-data:			xml
 alter-statement:			obsolete
 comment-paragraphs:			unconformable
 control-division:			unconformable
-partial-replacing-with-literal:		unconformable # not verified yet
+exact-partial-replacing-when-literal-src:	unconformable # not verified yet
 call-overflow:				ok
 data-records-clause:			obsolete
 debugging-mode:				ok
