@@ -200,7 +200,7 @@ dpc-in-data:			xml
 alter-statement:			unconformable
 comment-paragraphs:			unconformable
 control-division:			unconformable
-partial-replacing-with-literal:		unconformable
+exact-partial-replacing-when-literal-src:	unconformable
 call-overflow:				archaic
 data-records-clause:			unconformable
 debugging-mode:				unconformable
