@@ -200,7 +200,7 @@ dpc-in-data:			xml
 alter-statement:			obsolete
 comment-paragraphs:			obsolete
 control-division:			unconformable
-partial-replacing-with-literal:		unconformable
+exact-partial-replacing-when-literal-src:	unconformable
 call-overflow:				ok
 data-records-clause:			obsolete
 debugging-mode:				ok
