@@ -220,7 +220,7 @@ dpc-in-data:			xml
 alter-statement:			obsolete
 comment-paragraphs:			obsolete
 control-division:			unconformable
-partial-replacing-with-literal:		obsolete
+exact-partial-replacing-when-literal-src:	obsolete
 call-overflow:				archaic
 data-records-clause:			obsolete
 debugging-mode:				ok
