@@ -199,7 +199,7 @@ dpc-in-data:			xml
 alter-statement:			obsolete
 comment-paragraphs:			obsolete
 control-division:			ok
-partial-replacing-with-literal:		ok
+exact-partial-replacing-when-literal-src:	skip # i.e, does not replace exact matches
 call-overflow:				archaic
 data-records-clause:			obsolete
 debugging-mode:				ok
