@@ -198,7 +198,7 @@ dpc-in-data:			xml
 
 alter-statement:			obsolete
 comment-paragraphs:			obsolete
-partial-replacing-with-literal:		unconformable
+exact-partial-replacing-when-literal-src:	unconformable
 control-division:			unconformable
 call-overflow:				ok  # not verified yet
 data-records-clause:			obsolete
