@@ -203,7 +203,7 @@ dpc-in-data:			xml
 alter-statement:			obsolete
 comment-paragraphs:			ok
 control-division:			unconformable # not verified yet
-partial-replacing-with-literal:		unconformable # not verified yet
+exact-partial-replacing-when-literal-src:	unconformable # not verified yet
 call-overflow:				ok
 data-records-clause:			ignore
 debugging-mode:				unconformable
