@@ -205,7 +205,7 @@ dpc-in-data:			xml
 alter-statement:			obsolete
 comment-paragraphs:			obsolete
 control-division:			unconformable
-partial-replacing-with-literal:		unconformable # not verified yet
+exact-partial-replacing-when-literal-src:	unconformable # not verified yet
 call-overflow:				ok
 data-records-clause:			obsolete
 debugging-mode:				ok
