@@ -217,7 +217,7 @@ dpc-in-data:			xml
 
 alter-statement:			warning		# should not be used ...
 comment-paragraphs:			warning		# should not be used ...
-partial-replacing-with-literal:		unconformable
+exact-partial-replacing-when-literal-src:	unconformable
 control-division:			unconformable
 call-overflow:				ok
 data-records-clause:			warning		# should not be used ...
