@@ -248,7 +248,7 @@ AT_DATA([prog.cob], [
            STOP RUN.
 ])
 
-AT_CHECK([$COMPILE_ONLY -fpartial-replacing-with-literal=ok -t prog.lst -tlines=0 prog.cob], [0], [], [])
+AT_CHECK([$COMPILE_ONLY -fexact-partial-replacing-when-literal-src=skip -t prog.lst -tlines=0 prog.cob], [0], [], [])
 
 AT_DATA([expected.lst],
 [GnuCOBOL V.R.P               prog.cob                   DDD MMM dd HH:MM:SS YYYY
