@@ -1,4 +1,10 @@
 
+2022-12-07  Nicolas Berthier <nicolas.berthier@ocamlpro.com>
+
+	* general: rename partial-replacing-with-literal into
+	  exact-partial-replacing-when-literal-src, with special semantics of
+	  "skip".
+
 2022-12-03  Simon Sobisch <simonsobisch@gnu.org>
 
 	* runtime.cfg: updated COB_CURRENT_DATE for epoch
